fix: button misalignment

--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -24,6 +24,18 @@
 			margin-top: 0;
 		}
 
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6,
+		p {
+			&.has-background {
+				padding: 20px;
+			}
+		}
+
 		.wp-block-group {
 			padding-left: 0;
 			padding-right: 0;
@@ -38,69 +50,16 @@
 			}
 		}
 
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6,
-		p {
-			&.has-background {
-				padding: 20px;
+		.wp-block-buttons {
+			.block-list-appender {
+				margin: 0;
 			}
 		}
 
-		.wp-block {
-			&[data-type='core/button'] {
-				margin-left: auto !important;
-				margin-right: auto !important;
-				padding: 0;
-			}
-
-			&[data-type='core/list'] {
-				padding: 20px;
-				padding-left: calc( 20px + 1.3em );
-
-				ol,
-				ul {
-					margin-left: 0;
-					margin-right: 0;
-				}
-			}
-
-			&[data-type='core/social-link'] {
-				padding: 0;
-
-				&:not( [contenteditable] ):focus::after {
-					right: 0;
-				}
-			}
-
-			&[data-type='core/separator'] {
-				padding-bottom: 20px;
-				padding-top: 20px;
-
-				hr {
-					margin-bottom: 0;
-					margin-top: 0;
-				}
-			}
-
-			&[data-type='core/spacer'] {
-				.components-resizable-box__container {
-					margin-bottom: 0;
-				}
-			}
-
-			&[data-align='full'] {
-				margin: 0;
-				padding: 0;
-
-				.wp-block-group.has-background {
-					padding-top: 20px;
-					padding-bottom: 20px;
-				}
-			}
+		.wp-block-button {
+			margin-left: auto !important;
+			margin-right: auto !important;
+			padding: 0;
 		}
 
 		.wp-social-link {
@@ -154,6 +113,53 @@
 
 				&.has-background {
 					padding: 20px;
+				}
+			}
+		}
+
+		.wp-block {
+			&[data-type='core/list'] {
+				padding: 20px;
+				padding-left: calc( 20px + 1.3em );
+
+				ol,
+				ul {
+					margin-left: 0;
+					margin-right: 0;
+				}
+			}
+
+			&[data-type='core/social-link'] {
+				padding: 0;
+
+				&:not( [contenteditable] ):focus::after {
+					right: 0;
+				}
+			}
+
+			&[data-type='core/separator'] {
+				padding-bottom: 20px;
+				padding-top: 20px;
+
+				hr {
+					margin-bottom: 0;
+					margin-top: 0;
+				}
+			}
+
+			&[data-type='core/spacer'] {
+				.components-resizable-box__container {
+					margin-bottom: 0;
+				}
+			}
+
+			&[data-align='full'] {
+				margin: 0;
+				padding: 0;
+
+				.wp-block-group.has-background {
+					padding-top: 20px;
+					padding-bottom: 20px;
 				}
 			}
 		}
